--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,28 @@
 </head>
 <body>
 
+<div class="navbar navbar-default navbar-static-top"
+     role="navigation" bs-navbar>
+  <div class="navbar-header">
+    <a class="navbar-brand" href="/">
+      <span class="glyphicon glyphicon-list"></span>
+      <strong>Lists</strong>
+    </a>
+  </div>
+  <ul class="nav navbar-nav">
+    <li data-match-route="/$"><a href="/">Home</a></li>
+  </ul>
+  <ul class="nav navbar-nav pull-right" ng-if="!currentUser">
+    <li data-match-route="/login"><a href="/login">Login</a></li>
+    <li data-match-route="/signup"><a href="/signup">Sign up</a></li>
+  </ul>
+  <ul class="nav navbar-nav pull-right" ng-if="currentUser">
+    <li class="navbar-text" ng-bind="currentUser.email"></li>
+    <li><a href="javascript:void(0)" ng-click="logout()">Logout</a></li>
+  </ul>
+</div>
+
+
 <div ng-view></div>
 
 <script src="vendor/angular.js"></script>
@@ -20,6 +42,6 @@
 <script src="vendor/angular-route.js"></script>
 <script src="vendor/angular-cookies.js"></script>
 <script src="vendor/moment.min.js"></script>
-<script src="lists.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
